[package]
name = "rust_jwt_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.199", features = ["derive"] }
